--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "framer-motion": "^6.5.1",
     "next": "12.1.4",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.33.1"
+    "react-hook-form": "^7.33.1",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
