--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.33.1",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.54.0"
   },
   "devDependencies": {
